# generic-show

./: README.md  generic-show.cabal
examples/: Examples.hs  Reflection.hs
src/Generic/: Show.hs
src/Generic/Show/: Internal.hs
