name:                generic-show
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Lysxia/generic-show#readme
license:             MIT
license-file:        LICENSE
author:              Li-yao Xia
maintainer:          lysxia@gmail.com
copyright:           2017 Li-yao Xia
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Generic.Show
    Generic.Show.Internal
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lysxia/generic-show
